# ChickenVision

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
configs/: example_farm.yaml
docs/decisions/: 0001-phase0-tooling.md
src/chickenvision/cli/: app.py  dataset_cmd.py
src/chickenvision/config/: loader.py  schema.py
src/chickenvision/dataset/: extract_frames.py
src/chickenvision/ingest/: base.py  file_source.py  rtsp_source.py
tests/: conftest.py  test_config.py  test_extract_frames.py
